--- a/react_src/styles/base/_base.scss
+++ b/react_src/styles/base/_base.scss
@@ -1,10 +1,41 @@
 
-$brand-color: blue;
 
-*{
-	color:$brand-color;
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: $m-size;
 }
 
 .is-active{
 	font-weight:bold;
+	color:$active-color;
 }
+
+.brand-color{
+	background-color: $brand-color;
+}
+
+.s-font-size{
+	font-size: $s-size;
+}
+
+.m-font-size{
+	font-size: $m-size;
+}
+
+.l-font-size{
+	font-size: $l-size;
+}
+
+.overflow-content{
+  overflow: auto;
+}
+
+.center {
+  text-align: center;
+}
+
+
